# oomphlib_userdrivers

./: .gitignore  comp_tetgenold.sh  comp_with_old.sh  generate_qsub_script.sh  get_format_script.sh  ray_general_problem_parameters.h  ray_navier_stokes_parameters.h  ray_preconditioner_creation.h  rayheader.h  rsync_format_scripts.sh  rsync_to_scratch.sh  scratch_file_list.txt  set_namespace_parameters.sh  test_common_code.sh  validate.sh  validate_common_code.sh
code_for_thesis/: Makefile.am  driven_cavity.cc  two_d_ns.cc
concatenate_matrix_without_communication/: .gitignore  MMweakT01_12samecore.sh  Makefile.am  TVECT01_130m.sh  TVECT02_130m_static.sh  TVECT03_strong.sh  TVECT04_strongNN65.sh  copy_to_scratch.sh  mat_cat.cc  s2trong.qsub  strong50m.sh  strong50m_alternate_core_vec.sh  strongT6_nomemcpy.sh  strongT7_200m.sh  strongT8_130m.sh  strongT9_130m_callgrind.sh  strong_20m.sh  strong_matcat_np16.qsub  strong_scaling.qsub  strong_test_list.list  strong_testlist_np16.list  test_parallel.cc  test_parallel_nompi.cc  weak10_130m_notaskset.sh  weak50m.sh  weak50m_alternate_core_vec.sh  weakT10_ivybridge.sh  weakT1_25m.sh  weakT3_80m_commented_out.sh  weakT4_8by8block.sh  weakT5_16by16.sh  weakT7_200m.sh  weakT8_130m.sh  weakT9_130m_callgrind.sh  weak_20m.sh  weak_matcat_np16.qsub  weak_scaling.qsub  workingvalgrindcommand
concatenate_vector_with_communication/: .gitignore  Makefile.am  T02_nn134217727.sh  T02_nn33554431.sh  T05_nn67828_takenoutmap.sh  T06_nn67108863_takenoutmap.sh  VECCATWITHOUTCOM_WEAKT01_nn67108863_takenoutmap.sh  veccat.cc  veccat_comm_strong_T01_2bn.sh  veccat_comm_weak.sh  veccat_comm_weak_big.sh  veccat_wcomm_strong.sh  veccat_wcomm_weak.sh  veccat_without_comm.cc  veccat_withoutcomm_strong_T02_400mpc.sh  veccat_withoutcomm_strong_T03_nn67828.sh  veccat_withoutcomm_strong_T04_nn64000000.sh  veccat_withoutcomm_weak_T01_2bn.sh  veccat_withoutcomm_weak_T02_400mpc.sh  veccat_withoutcomm_weak_newsmall.sh  vecsplit_wcomm.cc  vecsplit_wcomm_strong.sh  vecsplit_wcomm_strong_nn67828.sh  vecsplit_wcomm_weak.sh  vecsplit_without_comm.cc  vecsplit_withoutcomm_strong_T02_400mpc.sh  vecsplit_withoutcomm_weak_T02_400mpc.sh
lagrange_annular_wedge_3d/: .gitignore  MMT08_amg_only.sh  MMT09Directsolve.sh  Makefile.am  NT09_strong3_solvetiming.sh  NT10_weak2_hashwell.sh  NT11_strong_strn75.sh  NT11_weak_strn75.sh  NT12_strong_strn0668.sh  NT12_strong_strn75_ivybridge.sh  NT12_weak_strn0668.sh  NT12_weak_strn75_ivybridge.sh  NT13_weak_NP24.sh  NT15_ndofMATCATmod.sh  NT15_ndofforMATCAT.sh  NT15_ndofforMATCAT_np16.sh  NT15_testingndofMATCAT.sh  NT16_matcat_strong.sh  NT16_matcat_weak.sh  NT17_matcat_strong.sh  NT17_matcat_weak.sh  NT18_matcat_strong.sh  NT18_matcat_weak.sh  NT19_vec_strong.sh  NT19_vec_weak.sh  NT20_strong.sh  NT20_weakdouble.sh  annular_wedge_threed.cc  aw3d_gen_big_amg_tests.sh  aw3d_gen_small_tests.sh  aw3d_mod.cc  difffolders.sh  generate_tests.sh  gentest.sh  mil01_amg_levels1.sh  mil01_amg_levels3.sh  newtest02_famg_blockdiag.sh  newtest04_strn.sh  newtest06_damp.sh  newtest07_csf2_smoothers.sh  (+11 more)
lagrange_cube/: .gitignore  MMT01_N4_N34_1V22GS_strn05.sh  MMT01_N4_N34_1V22GS_strn05_75.sh  MMT01_N4_N34_1V22GS_strn075.sh  MMT02_famg_blockdiag.sh  MMT04_strn.sh  MMT04_strn_N30.sh  MMT07_smoothers_strn0668.sh  MMT08_amg_only.sh  MMT09_amg_varyang.sh  MMT09_amg_varyang_A89.sh  MMT09_amg_varyang_N20.sh  MMT09_amg_varyang_N20_amgonly.sh  MMT09_amg_varyang_N20_outputtangonly.sh  MMT10Directsolve.sh  Makefile.am  cube.cc  cupo_gen_small_tests.sh  lgr_cube.cc  new_run.sh  newtest02_famg_blockdiag.sh  newtest02_famg_blockdiag_hmem.sh  newtest02_memory_hmem_euclid.sh  newtest02_memory_hmem_gs.sh  newtest04_strn.sh  newtest06_damp.sh  newtest07_smoothers.sh  newtest07_smoothers_maxiter_300.sh  newtest08_final_N18_N36_amgonly.sh  newtest08_final_N4_N16.sh  newtest08_final_exactsN16_only.sh  newtest09_vanilla_amg.sh  newtest09_vanilla_exacts.sh  plot_it.sh  run.sh  run_old_test.sh  strength_test.list  strength_test.sh  test_cube_RS_GS.sh  test_cube_RS_J05.sh  (+1 more)
lagrange_qcirc/: Makefile.am  qcirc2d.cc  qcirc2d_working_but_not_right.cc  test_qcirc_initial.sh
lagrange_square/: .gitignore  MMT01_compareELSCALSC.sh  MMT02_directsolve.sh  Makefile.am  SQT01_checking_resid.sh  SqTf_t1_varySigma.sh  calc_eig.m  calc_eig2.m  calc_eig_milan.m  dump_into_temprawmat.sh  final_working_param.sh  format_results.sh  format_results_07.sh  format_results_diag_newt1.sh  gen_test_list.sh  newtest01_f_blkdiag.sh  newtest01_f_blkdiag_ogmres.sh  newtest02_famg_blockdiag.sh  newtest02_famg_blockdiag_ogmres.sh  newtest03_famg_blockdiag_strn07.sh  newtest03_famg_blockdiag_strn07_ogmres.sh  newtest04_strn.sh  newtest04_strn_ogmres.sh  newtest05_Str_strn.sh  newtest05_Str_strn_ogmres.sh  newtest06_damp.sh  newtest06_damp_ogmres.sh  newtest07_smoothers.sh  newtest07_smoothers_ogmres.sh  newtest07_smoothers_ogmres_256.sh  newtest08_final_amg.sh  newtest08_final_amg_trilinos.sh  newtest08_final_exacts.sh  newtest08_final_exacts_trilinos.sh  newtest09_standard_amg.sh  newtest09_standard_exacts.sh  newtest10_amg_N256_angle.sh  newtest11_standard_amg.sh  newtest11_standard_exacts.sh  newtest1_famg_blockdiag.sh  (+28 more)
lagrange_step/: Makefile.am  StPo_t1_vary_amg.sh  format_results.sh  format_test7_StPo_final.sh  gen_test_list.sh  run.sh  run_amg_param_tests.sh  run_param_test_2_32.sh  step_po.cc  step_van.cc  test10_StPo_oomph_v_trilinos.sh  test5_StPo_Exact.sh  test6_StPo_vary_amg.sh  test7_StPo_final.sh  validate.sh
linear_elasticity_3d/: .gitignore  Makefile.am  extract_results.sh  lin_elas_lele.cc  lin_elas_qele.cc  periodic_load.cc  periodic_load_3d.cc  run.sh
milan_permutation/: .gitignore  Makefile.am  cube_hole.poly  gen_mesh.sh  link_tetgen_folder.sh  mesh_from_tetgen_poisson.cc  poisson_3d.cc  poisson_3d_no_bpf.cc  run_trial.sh
navier_stokes/: .gitignore  Makefile.am  cube.cc  navier_stokes_cube.cc  run.sh  run_three_d_fp.sh  three_d_fp.cc
poisson_three_d/: .gitignore  Makefile.am  T01_500k.sh  gen_tests.sh  grepstuff.sh  poisson_3d.cc  run.sh  two_d_unsteady_heat.cc  (+1 more)
(+820 files in other folders)
